exports[`Testing BookShelfChanger Component check render when state changes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookShelfChanger
    book={
        Object {
            "authors": Array [
              "Authors One",
            ],
            "id": 1,
            "imageLinks": Object {
              "thumbnail": "url/book/one",
            },
            "shelf": "read",
            "title": "Book One",
          }
    }
    onUpdateBook={[Function]} />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <select
        onChange={[Function]}
        value="read">
        <option
                disabled={true}
                value="">
                Move to...
        </option>
        <option
                value="currentlyReading">
                Currently Reading
        </option>
        <option
                value="wantToRead">
                Want to Read
        </option>
        <option
                value="read">
                Read
        </option>
        <option
                value="none">
                None
        </option>
</select>,
      "className": "book-shelf-changer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <option
            disabled={true}
            value="">
            Move to...
</option>,
          <option
            value="currentlyReading">
            Currently Reading
</option>,
          <option
            value="wantToRead">
            Want to Read
</option>,
          <option
            value="read">
            Read
</option>,
          <option
            value="none">
            None
</option>,
        ],
        "onChange": [Function],
        "value": "read",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Move to...",
            "disabled": true,
            "value": "",
          },
          "ref": null,
          "rendered": "Move to...",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Currently Reading",
            "value": "currentlyReading",
          },
          "ref": null,
          "rendered": "Currently Reading",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Want to Read",
            "value": "wantToRead",
          },
          "ref": null,
          "rendered": "Want to Read",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Read",
            "value": "read",
          },
          "ref": null,
          "rendered": "Read",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "None",
            "value": "none",
          },
          "ref": null,
          "rendered": "None",
          "type": "option",
        },
      ],
      "type": "select",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <select
          onChange={[Function]}
          value="read">
          <option
                    disabled={true}
                    value="">
                    Move to...
          </option>
          <option
                    value="currentlyReading">
                    Currently Reading
          </option>
          <option
                    value="wantToRead">
                    Want to Read
          </option>
          <option
                    value="read">
                    Read
          </option>
          <option
                    value="none">
                    None
          </option>
</select>,
        "className": "book-shelf-changer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <option
              disabled={true}
              value="">
              Move to...
</option>,
            <option
              value="currentlyReading">
              Currently Reading
</option>,
            <option
              value="wantToRead">
              Want to Read
</option>,
            <option
              value="read">
              Read
</option>,
            <option
              value="none">
              None
</option>,
          ],
          "onChange": [Function],
          "value": "read",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Move to...",
              "disabled": true,
              "value": "",
            },
            "ref": null,
            "rendered": "Move to...",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Currently Reading",
              "value": "currentlyReading",
            },
            "ref": null,
            "rendered": "Currently Reading",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Want to Read",
              "value": "wantToRead",
            },
            "ref": null,
            "rendered": "Want to Read",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Read",
              "value": "read",
            },
            "ref": null,
            "rendered": "Read",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "None",
              "value": "none",
            },
            "ref": null,
            "rendered": "None",
            "type": "option",
          },
        ],
        "type": "select",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Testing BookShelfChanger Component render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookShelfChanger
    book={Object {}}
    onUpdateBook={[Function]} />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <select
        onChange={[Function]}
        value={undefined}>
        <option
                disabled={true}
                value="">
                Move to...
        </option>
        <option
                value="currentlyReading">
                Currently Reading
        </option>
        <option
                value="wantToRead">
                Want to Read
        </option>
        <option
                value="read">
                Read
        </option>
        <option
                value="none">
                None
        </option>
</select>,
      "className": "book-shelf-changer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <option
            disabled={true}
            value="">
            Move to...
</option>,
          <option
            value="currentlyReading">
            Currently Reading
</option>,
          <option
            value="wantToRead">
            Want to Read
</option>,
          <option
            value="read">
            Read
</option>,
          <option
            value="none">
            None
</option>,
        ],
        "onChange": [Function],
        "value": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Move to...",
            "disabled": true,
            "value": "",
          },
          "ref": null,
          "rendered": "Move to...",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Currently Reading",
            "value": "currentlyReading",
          },
          "ref": null,
          "rendered": "Currently Reading",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Want to Read",
            "value": "wantToRead",
          },
          "ref": null,
          "rendered": "Want to Read",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Read",
            "value": "read",
          },
          "ref": null,
          "rendered": "Read",
          "type": "option",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "None",
            "value": "none",
          },
          "ref": null,
          "rendered": "None",
          "type": "option",
        },
      ],
      "type": "select",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <select
          onChange={[Function]}
          value={undefined}>
          <option
                    disabled={true}
                    value="">
                    Move to...
          </option>
          <option
                    value="currentlyReading">
                    Currently Reading
          </option>
          <option
                    value="wantToRead">
                    Want to Read
          </option>
          <option
                    value="read">
                    Read
          </option>
          <option
                    value="none">
                    None
          </option>
</select>,
        "className": "book-shelf-changer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <option
              disabled={true}
              value="">
              Move to...
</option>,
            <option
              value="currentlyReading">
              Currently Reading
</option>,
            <option
              value="wantToRead">
              Want to Read
</option>,
            <option
              value="read">
              Read
</option>,
            <option
              value="none">
              None
</option>,
          ],
          "onChange": [Function],
          "value": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Move to...",
              "disabled": true,
              "value": "",
            },
            "ref": null,
            "rendered": "Move to...",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Currently Reading",
              "value": "currentlyReading",
            },
            "ref": null,
            "rendered": "Currently Reading",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Want to Read",
              "value": "wantToRead",
            },
            "ref": null,
            "rendered": "Want to Read",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Read",
              "value": "read",
            },
            "ref": null,
            "rendered": "Read",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "None",
              "value": "none",
            },
            "ref": null,
            "rendered": "None",
            "type": "option",
          },
        ],
        "type": "select",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
